<resources>
    <string name="app_name">"كرة القدم الإنكليزية"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--<string name="admob_bunner_buttom">ca-app-pub-8681736614662277/9013516143</string>-->
    <!--<string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="admob_bunner_buttom">ca-app-pub-3112771865384930/5095956202</string>
    <string name="admob_interstitial">ca-app-pub-3112771865384930/6572689406</string>


    <string name="news_menu_item">الرئيسية</string>
    <string name="primium_league_menu_item">الدوري الإنجليزي الممتاز</string>
    <string name="experts_cup_menu_item">كأس رابطة المحترفين الإنجليزية</string>
    <string name="union_cup_menu_item">كأس الإتحاد الإنكليزي</string>

    <string name="selected_leagues_pref_key">NOTIFICATION_PREF</string>
    <string name="premium_league_notificatin_pref_key">PREMIUM_LEAGUE_NOTIFICATION_KEY</string>
    <string name="experts_cup_notification_pref_key">EXPERTS_CUP_NOTIFICATIN_KEY</string>
    <string name="union_cup_notification_pref_key">UNIONI_CUP_NOTIFICATIN_KEY</string>

    <string name="toast_featch_data_error">نأسف .. حدث خطأ في جلب بعض البيانات!</string>
    <string name="live_sport_item_menu">البث المباشر للمباريات</string>

</resources>
